--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start:build": "tsc -w",
     "start:run": "nodemon build/index.js",
     "start": "concurrently npm:start:*",
-    "test": "npx jest"
+    "test:all": "jest --collect-coverage",
+    "test:watch": "jest --watch --collect-coverage"
   },
   "keywords": [],
   "author": "",
